# DES_Head-Unit

./: .gitignore
Can_Receiver/src/: CanDataRegister.cpp  CanDataRegister.hpp  MovingAverageFilter.cpp  MovingAverageFilter.hpp  Speed_SensorStubImpl.cpp  Speed_SensorStubImpl.hpp  main.cpp
DES_Project3_IC/: CMakeLists.txt  main.qml  qml.qrc
